--- a/src/locales/es/common.json
+++ b/src/locales/es/common.json
@@ -2,8 +2,8 @@
   "home": {
     "hero": {
       "title": {
-        "first": "Haz la construccion de tu sitio web ",
-        "second": "mas rapida y facil",
+        "first": "Construye tu sitio web ",
+        "second": "mas rapido y facil ",
         "third": "usando componentes hechos con ",
         "fourth": "Tailwind CSS"
       },
